--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>🌍 Phone Timezone Checker</h1>
-        <p class="subtitle">Enter any phone number</p>
+        <p class="subtitle">Введите любой номер телефона</p>
         
         <input type="text" id="phoneInput" placeholder="+1234567890" autocomplete="off">
         
@@ -25,7 +25,7 @@
         <div id="error" class="error hidden"></div>
     </div>
 
-    <script src="https://unpkg.com/[email protected]/bundle/libphonenumber-max.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/google-libphonenumber@3.2.38/dist/libphonenumber.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
