--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>🌍 Phone Timezone Checker</h1>
-        <p class="subtitle">Введите любой номер телефона</p>
+        <p class="subtitle">Input phone number</p>
         
         <input type="text" id="phoneInput" placeholder="+1234567890" autocomplete="off">
         
